--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+pip==24.0
 streamlit
-transformers == 4.30.0
+transformers==4.37.2
 torch
 PyMuPDF
 pandas
 sentencepiece
+scikit-learn
+huggingface_hub
