--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-pip==24.0
-streamlit
-transformers==4.37.2
-torch
-PyMuPDF
-pandas
-sentencepiece
-scikit-learn
-huggingface_hub
+streamlit==1.25.0
+transformers==4.31.0
+tokenizers==0.13.3
+torch==2.0.1
+PyMuPDF==1.22.3
+pandas==1.5.3
+sentencepiece==0.1.99
+scikit-learn==1.2.2
+huggingface_hub==0.16.4
